<resources>
    <string name="app_name">app3_multitasking</string>
    <string name="adres_url">Adres URL</string>
    <string name="adres">Adres:</string>
    <string name="_0">0</string>
    <string name="rozmiar_pliku">Rozmiar pliku:</string>
    <string name="_0v1">0</string>
    <string name="typ_pliku">Typ pliku:</string>
    <string name="pobierz_plik">Pobierz plik</string>
    <string name="pobierz_informacje">pobierz informacje</string>
    <string name="_0v2">0</string>
    <string name="pobrano_bajt_w">Pobrano bajtów:</string>
    <string name="powiadomienie_tytul">Powiadomienie</string>
</resources>